[gd_scene load_steps=7 format=2]

[ext_resource path="res://resources/fonts/SHOWG.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/ui/Timer.gd" type="Script" id=2]
[ext_resource path="res://resources/sprites/ui/time.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "time_over"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("ClockTexture:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 15.0, -15.0, 15.0, -15.0, 15.0 ]
}

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 1 )

[node name="Timer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.05951
margin_right = 1.05951
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClockTexture" type="TextureRect" parent="."]
margin_left = -10.0
margin_right = 246.0
margin_bottom = 167.0
rect_scale = Vector2( 0.75, 0.75 )
rect_pivot_offset = Vector2( 128, 84 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="ClockTexture"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -6.5
margin_right = 23.0
margin_bottom = 34.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.560784, 0, 0.239216, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 4
text = "00:05"

[node name="DisabledLabel" type="Label" parent="ClockTexture"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -6.5
margin_right = 23.0
margin_bottom = 34.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.588235, 0.588235, 0.588235, 1 )
custom_colors/font_color_shadow = Color( 0.560784, 0, 0.239216, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 4
text = "00:05"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/time_over = SubResource( 2 )

[node name="ControlsLabel" type="Label" parent="."]
margin_left = 20.0
margin_top = 120.0
margin_right = 199.0
margin_bottom = 157.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.592157, 0.054902, 0.282353, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 4
text = "use  wasd"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
